# twitter_spam_scanner

./: .gitignore  pyproject.toml
twitter_spam_scanner/: twitter_spam_scanner.py
